--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="es">
   <head>
     <meta charset="utf-8">
-    <title>Bad bunny: El marketing que conquisto al mundo</title>
+    <title> Bad bunny: El marketing que conquisto al mundo </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Taller multimedia 1</h1>
+    <h1>Bad bunny: El marketing que conquisto al mundo</h1>
     <img src="images/gato-glitch.png" alt="Un gato glitcheado.">
     
     <h2>Experimentos en la web 🔬⚗️</h2>
