--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="images/gato-glitch.png" alt="Un gato glitcheado.">
     
     <h2>Experimentos en la web 🔬⚗️</h2>
-    <p>¿Qué hemos hecho?</p>
+    <p>¿Porque es tan importante?</p>
 
     <ul>
       <li>Gato glitch</li>
