Update list item in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>¿Porque es tan importante?</p>
 
     <ul>
-      <li>Gato glitch</li>
+      <li>Estrategias disruptivas de activación digital + experiencia de marca</li>
       <li>Una web con hotglue</li>
       <li>Prompt para humanos</li>
       <li>FakeNews</li>
