--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Bad bunny: El marketing que conquisto al mundo</h1>
     <img src="images/gato-glitch.png" alt="Un gato glitcheado.">
     
-    <h2>Experimentos en la web 🔬⚗️</h2>
+    <h2>Impacto global</h2>
     <p>¿Porque es tan importante?</p>
 
     <ul>
