Update list item in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <ul>
       <li>Estrategias disruptivas de activación digital + experiencia de marca</li>
-      <li>Una web con hotglue</li>
+      <li>Consolidación como marca cultural global con impacto récord (Super Bowl & streaming)</li>
       <li>Prompt para humanos</li>
       <li>FakeNews</li>
     </ul>
