Replace 'Prompt para humanos' with new list item

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ul>
       <li>Estrategias disruptivas de activación digital + experiencia de marca</li>
       <li>Consolidación como marca cultural global con impacto récord (Super Bowl & streaming)</li>
-      <li>Prompt para humanos</li>
+      <li>Colaboraciones con marcas globales y expansión de su marca personal</li>
       <li>FakeNews</li>
     </ul>
 
