--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li>Estrategias disruptivas de activación digital + experiencia de marca</li>
       <li>Consolidación como marca cultural global con impacto récord (Super Bowl & streaming)</li>
       <li>Colaboraciones con marcas globales y expansión de su marca personal</li>
-      <li>FakeNews</li>
+      <li>Convertir el español en el idioma dominante del streaming global</li>
     </ul>
 
   </body>
