Replace image of cat with Bad Bunny image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>Bad bunny: El marketing que conquisto al mundo</h1>
-    <img src="images/gato-glitch.png" alt="Un gato glitcheado.">
+    <img src="images/bad-bunny-en-la-super-bowl-ep-2.jpeg" alt="Bad bunny en el super bowl">
     
     <h2>Impacto global</h2>
     <p>¿Porque es tan importante?</p>
